fixing the div overflow to scrollable adding the cases of no answer

--- a/src/assets/sass/paper-kit/_examples.scss
+++ b/src/assets/sass/paper-kit/_examples.scss
@@ -7,7 +7,7 @@
     background-size: cover;
     min-height: 100vh;
     max-height: 999px;
-    overflow: hidden;
+    overflow: scroll;
     position: relative;
     width: 100%;
     z-index: 1;
